// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.schema;

option go_package = "namespacelabs.dev/foundation/schema";

import "schema/definition.proto";
import "schema/environment.proto";
import "schema/schema.proto";
import "schema/networking.proto";
import "schema/workspace.proto";

// Next ID: 10
message DeployPlan {
    Workspace                workspace        = 8;
    Environment              environment      = 7;
    Stack                    stack            = 1;
    repeated string          focus_server     = 9;
    repeated IngressFragment ingress_fragment = 4;
    repeated string          hints            = 5;
    SerializedProgram        program          = 6;

    reserved 2, 3;
}
