// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.std.web.http;

option go_package = "namespacelabs.dev/foundation/std/web/http";

import "std/proto/options.proto";

message Backend {
    string endpoint_owner = 1 [(foundation.std.proto.is_package) = true];
    string service_name   = 2;
    string ingress_name   = 3;
    string manager        = 4;
}